[project]
name = "dict_tools"
version = "3.2.1"
description = "Essential nodes to use dictionaries in ComfyUI: for smart prompt-formatting, general organization (passing a single connection instead of spaghetti), or anything else."
license = {file = "LICENSE.md"}
readme = "README.md"
authors = [
  {name = "Lex Darlog"}
]
requires-python = ">=3.8"  # Protocols are used
dependencies = ["frozendict"]
classifiers = [
  # https://docs.comfy.org/registry/specifications#classifiers-recommended
  "Operating System :: OS Independent",
]

[project.urls]
Repository = "https://github.com/Lex-DRL/ComfyUI-DictTools"
"Feedback/Bugs/Feature Requests" = "https://github.com/Lex-DRL/ComfyUI-DictTools/issues"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = "lex-drl"
DisplayName = "🗂️ Dict Tools"
# Icon = "https://raw.githubusercontent.com/username/repo/main/icon.png"
# Banner = "https://raw.githubusercontent.com/username/repo/main/banner.png"
requires-comfyui = ">=0.18.0" # Tested with somewhat-stable Node schema v3
